# MediaViewer

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Dockerfile.devenv  LICENSE  Makefile  README.md  SEED_DATA_GUIDE.md  TODO.md  dagger-requirements.txt  daily.sh  daily.sql  default.nix  dev_requirements.txt  devenv.nix  docker-compose.playwright.yml  docker-compose.yml  fabfile.py  flake.nix  gunicorn.conf.py  main.py  manage.py  migrate.sql  nginx-mediaviewer.conf  node-env.nix  node-packages.nix  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run-tests.sh  scrub.py  setup.cfg  setup.sql  test_requirements.txt  travis_requirements.txt
.github/workflows/: build-devenv-image.yml  docker-image.yml  pr.yml  publish.yml  test.yml
ci/: main.py
config/: settings.py  wsgi.py
configs/: docker_settings.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
logs/: .gitignore
mediaviewer/: admin.py  apps.py  authenticators.py  conftest.py  createUser.py  dropUser.py  forms.py  interjections.py  log.py  middleware.py  migration.py  package.json  tests.py  urls.py  utils.py
mediaviewer/api/: collection_viewset.py  file_viewset.py  media_file_viewset.py  media_path_viewset.py  movie_viewset.py  path_viewset.py  permissions.py  serializers.py  tv_viewset.py  viewset.py
mediaviewer/migrations/: 0001_initial.py  0002_auto_20161023_2108.py  0002_auto_20161111_1512.py  0003_merge_20161111_2120.py  0004_auto_20161115_2057.py  0005_auto_20161127_1008.py  0006_auto_20161212_0613.py  0007_auto_20161217_0820.py  0008_auto_20161229_0808.py  0009_videoprogress_file.py  0009_videoprogress_token.py  0010_mediagenre.py  0011_auto_20170119_2030.py  0012_auto_20170121_2207.py  0013_auto_20170203_1512.py  0013_auto_20170203_1706.py  0013_auto_20170204_0914.py  0013_auto_20170204_1045.py  0014_auto_20170204_1047.py  0015_auto_20170219_0926.py  0016_posterfile_tmdb_id.py  0017_actor_order.py  0018_auto_20170314_2131.py  0019_usersettings_binge_mode.py  0020_auto_20170421_0903.py  0021_auto_20170819_0951.py  0022_message_message_type.py  0023_auto_20170826_0910.py  0024_auto_20170902_1025.py  0025_usersettings_jump_to_last_watched.py  0026_remove_usersettings_auto_download.py  0027_posterfile_poster_url.py  0028_remove_posterfile_image.py  0029_posterfile_tagline.py  0030_auto_20190105_1925.py  0031_auto_20190113_0949.py  0032_file_users.py  0033_auto_20190302_2010.py  0034_migrate_paths.py  0035_path_finished.py  (+46 more)
mediaviewer/models/: __init__.py  actor.py  apikey.py  collection.py  comment.py  core.py  datatransmission.py  director.py  donation_site.py  downloadclick.py  downloadtoken.py  error.py  file.py  filenamescrapeformat.py  genre.py  loginevent.py  media.py  mediafile.py  mediagenre.py  mediapath.py  message.py  movie.py  path.py  person.py  poster.py  posterfile.py  request.py  sitegreeting.py  tv.py  tvdbconfiguration.py  usercomment.py  usersettings.py  videoprogress.py  waiterstatus.py  writer.py
mediaviewer/static/: .gitignore
mysite/: docker_settings.py  settings.py  travis.settings  travis_settings.py  urls.py  wsgi.py
nginx/: nginx-mediaviewer.conf
requirements/: base_requirements.txt  dev_requirements.txt  test_requirements.txt
server/: .gitignore  genSSLcert.sh  mediaviewer.conf  setup.sh  supervisor.conf  uwsgi.conf
site/: settings.py  urls.py  wsgi.py
supervisor/: supervisor.conf
uwsgi/: uwsgi.conf
(+198 files in other folders)
