[tool.poetry]
name = "mediaviewer"
version = "0.1.0"
description = ""
authors = ["Kevin Yokley <kyokley2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^2.1"
django-memcached = "^0.1.2"
django-axes = "^4.5"
psycopg2 = "=2.8.*"
python-dateutil = "^2.7"
uwsgi = "^2.0"
django-ipware = "^2.1"
djangorestframework = "^3.9"
pytz = "^2018.9"
requests = "^2.21"
django-widget-tweaks = "^1.4"
django-bower = "^5.2"
django-referrer-policy = "^1.0"
django-extensions = "^3.1.5"

[tool.poetry.dev-dependencies]
mock = "^2.0"
django-debug-toolbar = "^1.11"
bandit = "^1.5"
pytest-django = "^3.4"
pytest-cov = "^2.6"
bpython = "^0.17.1"
pdbpp = "^0.9.3"
coverage = "^4.5"
django-silk = "^3.0"
pytest-mock = "^3.6.1"
Faker = "^10.0.0"
black = "^21.12b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
